--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,99 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #121212;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.App {
+  background: #121212;
+  color: #fff;
+  width: 90%;
+  margin: 20px auto;
+  max-width: 700px;
+}
+
+.navbar {
+  padding: 10px 20px;
+  text-align: center;
+  background-color: #eb8a0c;
+}
+
+.navbar h1 {
+  margin: 10px 0;
+}
+
+.anime-list {
+  margin: 20px;
+}
+
+.anime-list ul {
+  padding: 0;
+  list-style-type: none;
+}
+
+.anime-list li {
+  background: #eb8a0c;
+  border-radius: 4px;
+  padding: 10px;
+  cursor: pointer;
+  margin: 10px 0;
+}
+
+.anime-list li:hover {
+  opacity: 0.7;
+  text-decoration: line-through;
+}
+
+.anime-list .title {
+  font-weight: bold;
+  color: #fff;
+  font-size: 1.2rem;
+}
+
+.anime-list .rating {
+  font-size: 1rem;
+  font-weight: 800;
+  color: #ddd;
+}
+
+.empty {
+  margin: 20px;
+  text-align: center;
+  background-color: #eb8a0c;
+  padding: 20px;
+  border-radius: 10px;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.form {
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+}
+
+input{
+  padding: 10px;
+  margin: 20px;
+  background: #cecece;
+  color: #121212;
+  border: 0;
+  width: 20%;
+}
+
+input[type="submit"] {
+  background: #eee;
+  border: 0;
+  padding: 6px 20px;
+}
+
+input[type="submit"]:hover {
+  background: #cecece;
+  border: 0;
+  padding: 6px 20px;
 }
